--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "microcms-js-sdk": "^1.1.0",
     "next": "^10.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^15.12.4",
