--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --write .",
+    "test-all": "npx yarn-run-all lint check-types format lint:fix"
   },
   "dependencies": {
     "classnames": "^2.3.1",
@@ -19,6 +21,12 @@
   "devDependencies": {
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
-    "typescript": "^4.3.4"
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "eslint": "^7.31.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.24.0",
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5"
   }
 }
