--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "date-fns": "^2.22.1",
+    "destyle.css": "^2.0.2",
     "microcms-js-sdk": "^1.1.0",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "sanitize.css": "^12.0.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
