--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test-all": "npx yarn-run-all lint check-types format lint:fix"
   },
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/styled": "^11.3.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.22.1",
     "destyle.css": "^2.0.2",
