--- a/package.json
+++ b/package.json
@@ -10,24 +10,28 @@
     "test-all": "npx yarn-run-all lint check-types format lint:fix"
   },
   "dependencies": {
+    "@babel/core": "^7.15.0",
     "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "classnames": "^2.3.1",
-    "date-fns": "^2.22.1",
+    "date-fns": "^2.23.0",
     "destyle.css": "^2.0.2",
-    "microcms-js-sdk": "^1.1.0",
-    "next": "^10.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "microcms-js-sdk": "^1.2.0",
+    "next": "^11.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-syntax-highlighter": "^15.4.4",
     "sanitize.css": "^12.0.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "@types/node": "^15.12.4",
-    "@types/react": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
-    "eslint": "^7.31.0",
+    "@types/node": "^15.14.7",
+    "@types/react": "^17.0.18",
+    "@types/react-syntax-highlighter": "^13.5.2",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
     "prettier": "^2.3.2",
