--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "cheerio": "^1.0.0-rc.10",
     "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
     "destyle.css": "^2.0.2",
+    "highlight.js": "^11.2.0",
     "microcms-js-sdk": "^1.2.0",
     "next": "^11.1.0",
     "react": "^17.0.2",
