--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-videos": "1.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scrollmagic": "^2.3.0",
     "react-syntax-highlighter": "^15.4.4",
     "sanitize.css": "^12.0.1",
