--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "caniuse-lite": "^1.0.30001311",
     "cheerio": "^1.0.0-rc.10",
     "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
