--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "format": "prettier --write .",
     "test-all": "npx yarn-run-all lint check-types format lint:fix"
@@ -12,8 +12,8 @@
   "dependencies": {
     "@babel/core": "^7.15.0",
     "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "caniuse-lite": "^1.0.30001311",
     "cheerio": "^1.0.0-rc.10",
     "classnames": "^2.3.1",
@@ -31,8 +31,7 @@
     "react-syntax-highlighter": "^15.4.4",
     "sanitize.css": "^12.0.1",
     "sass": "^1.43.4",
-    "smtpjs": "0.0.1",
-    "styled-components": "^5.3.0"
+    "smtpjs": "0.0.1"
   },
   "devDependencies": {
     "@types/node": "^15.14.7",
@@ -40,10 +39,13 @@
     "@types/react-syntax-highlighter": "^13.5.2",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
+    "autoprefixer": "^10.4.5",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
+    "postcss": "^8.4.13",
     "prettier": "^2.3.2",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.3.5"
   }
 }
