--- a/package.json
+++ b/package.json
@@ -15,20 +15,22 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "caniuse-lite": "^1.0.30001311",
-    "cheerio": "^1.0.0-rc.10",
     "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
+    "dayjs": "^1.11.2",
     "destyle.css": "^2.0.2",
     "eslint-config-next": "^12.0.2",
-    "highlight.js": "^11.2.0",
+    "highlight.js": "^11.5.1",
     "microcms-js-sdk": "^1.2.0",
     "next": "^12.0.10",
     "next-videos": "1.4.0",
+    "nextjs-progressbar": "^0.0.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scrollmagic": "^2.3.0",
     "react-syntax-highlighter": "^15.4.4",
+    "react-use": "^17.3.2",
     "sanitize.css": "^12.0.1",
     "sass": "^1.43.4",
     "smtpjs": "0.0.1"
