package.json script 調整

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "format": "prettier --write .",
     "test-all": "npx yarn-run-all lint check-types format lint:fix"
   },
