--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@three-ts/orbit-controls": "^1.4.7",
     "caniuse-lite": "^1.0.30001339",
     "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
@@ -34,15 +35,18 @@
     "react-use": "^17.3.2",
     "sanitize.css": "^12.0.1",
     "sass": "^1.43.4",
-    "smtpjs": "0.0.1"
+    "smtpjs": "0.0.1",
+    "three": "^0.141.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.32",
     "@types/react": "^17.0.18",
     "@types/react-syntax-highlighter": "^15.5.1",
+    "@types/three": "^0.141.0",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "autoprefixer": "^10.4.7",
+    "csstype": "^3.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.29.4",
