--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "sanitize.css": "^12.0.1",
     "sass": "^1.43.4",
     "smtpjs": "0.0.1",
-    "three": "^0.141.0"
+    "three": "^0.141.0",
+    "three-fly-controls": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.32",
