--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.23.0",
     "dayjs": "^1.11.2",
     "destyle.css": "^2.0.2",
+    "dotenv": "^16.0.1",
     "eslint-config-next": "^12.0.2",
     "highlight.js": "^11.5.1",
     "microcms-js-sdk": "^2.0.0",
